--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ packaging==23.2
 pandas==2.1.3
 pefile==2023.2.7
 Pillow==10.1.0
+plotly==5.18.0
 protobuf==4.25.0
 pyarrow==14.0.1
 pydeck==0.8.1b0
@@ -49,7 +50,7 @@ seaborn==0.13.0
 setuptools==68.2.2
 six==1.16.0
 smmap==5.0.1
-streamlit==1.28.2
+streamlit==1.29.0
 tenacity==8.2.3
 toml==0.10.2
 toolz==0.12.0
